Revert "[dialer] Code format"
This reverts commit 94018a40d632f5c6e8e0f81f9659d08f5dac7bd4.